--- a/Diplom/AddFileToLexGroup.resx
+++ b/Diplom/AddFileToLexGroup.resx
@@ -123,7 +123,7 @@
 Просто выберете файл и нажмите OK программа сама добавит файл.
 
 !!ВНИМАНИЕ!!
-Файл должен иметь примерно следующий формат - 
+Файл должен иметь следующий формат - 
 {тавшись,чься,чьтесь,че{мся,тся,шься,тесь},та{лся,лась,лись,лось,ться},чусь,чутся} 
 спря
 упря</value>
